--- a/guidelines/audio_producers/index.html
+++ b/guidelines/audio_producers/index.html
@@ -17,7 +17,7 @@
   <body>
     <h1 id="global-asp-guidelines-for-audio-recording">Global ASP Guidelines for Audio Recording - Producers</h1>
 
-    <div id="content">
+  <div id="content">
     <div width="50%">
     <table><tr><td width="50%">
     <p>Below are a series of guidelines for recording audio, developed during the process of creating <a href="https://global-asp.github.io/audio/">freely-licensed audio versions</a> of multilingual stories from the <a href="http://africanstorybook.org/">African Storybook</a> and <a href="https://global-asp.github.io/">Global African Storybook Project</a> collections.</p></td>
@@ -103,8 +103,18 @@
       <li>Make sure you use a pop filter to avoid popping sounds during speech.</li>
       <li>Ask the reader to make an effort to speak up.</li>
     </ul>
+
+    <p>Soundproofing using available materials can sometimes reduce or eliminate environmental noise:</p>
+    <ul>
+      <li>Thick clothing, pillows, cushions, or blankets can be a reasonably effective soundproofing material:</li>
+      <ul>
+        <li>A closet or other location surrounded by layers of hanging clothing may be a decent workaround if a quiet locaton cannot be found.</li>
+        <li>Hanging thick clothing between the recording equipment and the source of noise (fan, window, etc.) may help to reduce noise.</li>
+        <li>Likewise, enclosing a small area where the microphone is located (such as a desk) with cushions or other material may help to drown out external noise. (<a href="https://twitter.com/devuppodcast/status/959610188960591872">Example</a>)</li>
+      </ul>
+    </ul>
     </div>
-    </div>
+  </div>
 
   </body>
   <footer><p style="font-size:small"><a href="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg">Image</a> by Wiehan de Jager (CC-BY), found using the <a href="https://global-asp.github.io/imagebank/">ASP Imagebank Explorer</a>. <a href="https://github.com/yegor256/tacit/">Tacit theme</a> by Yegor Bugayenko.</p></footer>
