--- a/guidelines/audio_readers/index.html
+++ b/guidelines/audio_readers/index.html
@@ -12,7 +12,7 @@
       }
     </style>
 
-    <title>Global ASP Guidelines for Audio Recording</title>
+    <title>Global ASP Guidelines for Audio Recording - Readers</title>
   </head>
   <body>
     <h1 id="global-asp-guidelines-for-audio-recording">Global ASP Guidelines for Audio Recording</h1>
