--- a/stories/nb/0030_følelser_slides.html
+++ b/stories/nb/0030_følelser_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p>Jeg føler mamma er glad i meg når hun gir meg en klem.</p>
+<p>Jeg føler at mamma er glad i meg når hun gir meg en klem.</p>
 <center>
 <strong>5</strong>
 </center>
