--- a/stories/nb/0066_nozibele-og-de-tre-hårstråene.html
+++ b/stories/nb/0066_nozibele-og-de-tre-hårstråene.html
@@ -70,7 +70,7 @@ Tessa Welch<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
 
-<p>Da de var nesten hjemme, la Nozibele hånden på halsen. Hun hadde glemt halsbåndet! “Vær så snill og dra tilbake sammen med meg!” tryglet hun venninnene sine. Men venninnene hennes sa at det var for sent.</p>
+<p>Da de var nesten hjemme, la Nozibele hånden på halsen. Hun hadde glemt halsbåndet! “Vær så snill å dra tilbake sammen med meg!” tryglet hun venninnene sine. Men venninnene hennes sa at det var for sent.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
