--- a/stories/nb/0066_nozibele-og-de-tre-hårstråene_slides.html
+++ b/stories/nb/0066_nozibele-og-de-tre-hårstråene_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p>Da de var nesten hjemme, la Nozibele hånden på halsen. Hun hadde glemt halsbåndet! &quot;Vær så snill og dra tilbake sammen med meg!&quot; tryglet hun venninnene sine. Men venninnene hennes sa at det var for sent.</p>
+<p>Da de var nesten hjemme, la Nozibele hånden på halsen. Hun hadde glemt halsbåndet! &quot;Vær så snill å dra tilbake sammen med meg!&quot; tryglet hun venninnene sine. Men venninnene hennes sa at det var for sent.</p>
 <center>
 <strong>4</strong>
 </center>
