--- a/stories/nn/0066_nozibele-og-dei-tre-hårstråa_slides.html
+++ b/stories/nn/0066_nozibele-og-dei-tre-hårstråa_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p>Då dei var nesten heime, la Nozibele handa på halsen. Ho hadde gløymt halsbandet! &quot;Ver så snill og dra tilbake saman med meg!&quot; trygla ho veninnene sine. Men veninnene hennar sa at det var for seint.</p>
+<p>Då dei var nesten heime, la Nozibele handa på halsen. Ho hadde gløymt halsbandet! &quot;Ver så snill å dra tilbake saman med meg!&quot; trygla ho veninnene sine. Men veninnene hennar sa at det var for seint.</p>
 <center>
 <strong>4</strong>
 </center>
