--- a/stories/nb/0324_den-dagen-jeg-dro-hjemmefra-for-å-dra-til-byen.html
+++ b/stories/nb/0324_den-dagen-jeg-dro-hjemmefra-for-å-dra-til-byen.html
@@ -49,7 +49,7 @@ Lesley Koyi, Ursula Nafula<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
 
-<p>Den lille busstasjonen i landsbyen min var travel og stappfull av busser. På bakken var det flere ting som skulle lastes. Medhjelpere ropte navnene på stedene dit bussene gikk.</p>
+<p>Den lille busstasjonen i landsbyen min var travel og stappfull av busser. På bakken var det flere ting som skulle lastes. Medhjelpere ropte navnene på stedene dit hvor bussene gikk.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
