--- a/stories/nn/0030_kjensler.html
+++ b/stories/nn/0030_kjensler.html
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>nynorsk</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
 
-<p>Eg føler mamma er glad i meg når ho gjev meg ein klem.</p>
+<p>Eg føler at mamma er glad i meg når ho gjev meg ein klem.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
