--- a/stories/nn/0030_kjensler_slides.html
+++ b/stories/nn/0030_kjensler_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p>Eg føler mamma er glad i meg når ho gjev meg ein klem.</p>
+<p>Eg føler at mamma er glad i meg når ho gjev meg ein klem.</p>
 <center>
 <strong>5</strong>
 </center>
