--- a/stories/nn/0066_nozibele-og-dei-tre-hårstråa.html
+++ b/stories/nn/0066_nozibele-og-dei-tre-hårstråa.html
@@ -70,7 +70,7 @@ Tessa Welch<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
 
-<p>Då dei var nesten heime, la Nozibele handa på halsen. Ho hadde gløymt halsbandet! “Ver så snill og dra tilbake saman med meg!” trygla ho veninnene sine. Men veninnene hennar sa at det var for seint.</p>
+<p>Då dei var nesten heime, la Nozibele handa på halsen. Ho hadde gløymt halsbandet! “Ver så snill å dra tilbake saman med meg!” trygla ho veninnene sine. Men veninnene hennar sa at det var for seint.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
