--- a/stories/nn/0324_den-dagen-eg-drog-heimanfrå-for-å-dra-til-byen_slides.html
+++ b/stories/nn/0324_den-dagen-eg-drog-heimanfrå-for-å-dra-til-byen_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
-<p>Den vesle busstasjonen i landsbyen min var travel og stappfull av busser. På bakken var det fleire ting som skulle lastast. Medhjelparane ropte namna på stadane dit bussane gjekk.</p>
+<p>Den vesle busstasjonen i landsbyen min var travel og stappfull av busser. På bakken var det fleire ting som skulle lastast. Medhjelparane ropte namna på stadane dit kor bussane gjekk.</p>
 <center>
 <strong>1</strong>
 </center>
