--- a/guidelines/audio_readers/index.html
+++ b/guidelines/audio_readers/index.html
@@ -15,7 +15,7 @@
     <title>Global ASP Guidelines for Audio Recording - Readers</title>
   </head>
   <body>
-    <h1 id="global-asp-guidelines-for-audio-recording">Global ASP Guidelines for Audio Recording</h1>
+    <h1 id="global-asp-guidelines-for-audio-recording">Global ASP Guidelines for Audio Recording - Readers</h1>
 
     <div id="content">
     <div width="50%">
@@ -96,7 +96,7 @@
       <ul>
         <li>Make sure that you don’t continue to read aloud until the sound of the pages turning has ceased <em>completely</em>.</li>
       </ul>
-      <li>If you are reading from a screen, make sure to avoid mouse or keyboard clicking noises during recording/</li>
+      <li>If you are reading from a screen, make sure to avoid mouse or keyboard clicking noises during recording.</li>
     </ul>
 
     </div>
