--- a/stories/ar/0141_-الدجاجة-والدودة-.html
+++ b/stories/ar/0141_-الدجاجة-والدودة-.html
@@ -131,7 +131,7 @@ Winny Asara<br>العربية</div><div class="pagebreak">
 <div class="pagenum">12</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
-<p dir="rtl"><strong>Text:</strong> Winny Asara<br /><strong>Illustrations:</strong> Winny Asara<br /><strong>Translation:</strong> Abrar Wafa<br /><strong>Language:</strong> Arabic</p>
+<p dir="rtl"><strong>Text:</strong> Winny Asara<br /><strong>Illustrations:</strong> Magriet Brink<br /><strong>Translation:</strong> Abrar Wafa<br /><strong>Language:</strong> Arabic</p>
 <p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/chicken-and-millipede">here</a>
 <p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
