--- a/stories/index.html
+++ b/stories/index.html
@@ -86,6 +86,7 @@
 <li class="toc"><a href="#italian">Italian [Italiano]</a></li><br>
 <li class="toc"><a href="#jamaican-creole">Jamaican Creole [Patwa]</a></li><br>
 <li class="toc"><a href="#japanese">Japanese [日本語]</a></li><br>
+<li class="toc"><a href="#khmer">Khmer [ភាសាខ្មែរ]</a></li><br>
 <li class="toc"><a href="#korean">Korean [한국어]</a></li><br>
 <li class="toc"><a href="#malay">Malay [Bahasa Melayu]</a></li><br>
 <li class="toc"><a href="#nahuatl">Nahuatl [Nāhuatl]</a></li><br>
@@ -2775,6 +2776,39 @@
       <td><a href="/stories/ja/0329_怠け者のアナンシ_slides.html" target="_blank">怠け者のアナンシ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0329"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='khmer'>Khmer [ភាសាខ្មែរ]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0092</td>
+      <td><a href="/stories/km/0092_ទន្សាយ-និងអណ្ដើក-ជាថ្មី_slides.html" target="_blank">ទន្សាយ និងអណ្ដើក (ជាថ្មី)</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="km0092"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0141</td>
+      <td><a href="/stories/km/0141_មាន់-និង-ម្រើមព្រះ_slides.html" target="_blank">មាន់ និង ម្រើមព្រះ</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="km0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0200</td>
+      <td><a href="/stories/km/0200_ដាយស៊ី-កូនមាន់អស្ចារ្យ_slides.html" target="_blank">ដាយស៊ី កូនមាន់អស្ចារ្យ!</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="km0200"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -6366,6 +6400,12 @@
       <td><a href="#vi0090">vi</a></td>
     </tr>
     <tr>
+      <td>0092</td>
+      <td><a href="http://africanstorybook.org/stories/hare-and-tortoise-again">Hare and Tortoise (Again!)</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#km0092">km</a></td>
+    </tr>
+    <tr>
       <td>0093</td>
       <td><a href="http://africanstorybook.org/stories/my-baby-boy">My baby boy</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
@@ -6477,7 +6517,7 @@
       <td>0141</td>
       <td><a href="http://africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0141">ar</a>, <a href="#bn0141">bn</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ja0141">ja</a>, <a href="#ko0141">ko</a>, <a href="#nb0141">nb</a>, <a href="#nn0141">nn</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#tr0141">tr</a>, <a href="#ur0141">ur</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
+      <td><a href="#ar0141">ar</a>, <a href="#bn0141">bn</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ja0141">ja</a>, <a href="#km0141">km</a>, <a href="#ko0141">ko</a>, <a href="#nb0141">nb</a>, <a href="#nn0141">nn</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#tr0141">tr</a>, <a href="#ur0141">ur</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0143</td>
@@ -6543,7 +6583,7 @@
       <td>0200</td>
       <td><a href="http://africanstorybook.org/stories/amazing-daisy">Amazing Daisy</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#de0200">de</a></td>
+      <td><a href="#de0200">de</a>, <a href="#km0200">km</a></td>
     </tr>
     <tr>
       <td>0201</td>
