--- a/stories/ja/0141_鶏とヤスデ_slides.html
+++ b/stories/ja/0141_鶏とヤスデ_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="鶏とヤスデ-1">鶏とヤスデ</h2>
-<strong>作:</strong> Winny Asara<br> <strong>絵:</strong> Winny Asara<br> <strong>訳:</strong> Rion Nakamichi<br> <strong>言語:</strong> 日本語<br>
+<strong>作:</strong> Winny Asara<br> <strong>絵:</strong> Magriet Brink<br> <strong>訳:</strong> Rion Nakamichi<br> <strong>言語:</strong> 日本語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
