--- a/stories/km/0092_ទន្សាយ-និងអណ្ដើក-ជាថ្មី_slides.html
+++ b/stories/km/0092_ទន្សាយ-និងអណ្ដើក-ជាថ្មី_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>خروس و هزارپا - Global African Storybook</title>
+  <title>ទន្សាយ និងអណ្ដើក (ជាថ្មី) - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,18 @@
 </head>
 <body>
 
-<section id="خروس-و-هزارپا" class="slide level1">
-<h1 dir="rtl">خروس و هزارپا</h1>
+<section id="ទនសយ-នងអណដក-ជថម" class="slide level1">
+<h1>ទន្សាយ និងអណ្ដើក (ជាថ្មី)</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
-<p dir="rtl">خروس و هزارپا با هم دوست بودند. ولی همیشه با هم در حال رقابت بودند. یک روز تصمیم گرفتند با هم فوتبال بازی کنند تا ببینند چه کسی بهترین بازیکن است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/02.jpg" /></p>
+<p>តើនៅចាំពីការរត់ប្រណាំងដ៏អស្ចារ្យរវាងទន្សាយ និងអណ្ដើកឬទេ?</p>
+<p>ជាយូរមកហើយ សត្វទាំងឡាយក្នុងអាណាចក្រសត្វទាំងមូល មិននិយាយអ្វីក្រៅតែអំពីការរត់ប្រណាំង និងគូប្រកួតទាំងពីរនេះឡើយ។</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +106,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
-<p dir="rtl">آنها به زمین فوتبال رفتند وبازیشان را شروع کردند. خروس سریع حرکت می‌کرد ولی هزارپا سریعتر بود. خروس توپ را به دور پرتاب می‌کرد ولی هزارپا به دورتر. خروس شروع به بداخلاقی کرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/03.jpg" /></p>
+<p>យើងដឹងហើយថាទន្សាយចាញ់ដោយសារវាខ្ជិល និងមានអំណួតខ្លាំងពេក។</p>
+<p>យើងដឹងហើយថាអណ្ដើកឈ្នះដោយសារវាព្យាយាមមិនខ្ជិល ទោះបីជាវាយឺតក៏ដោយ។ សត្វព្រៃទាំងអស់ក៏ដឹងរឿងនេះ ហើយតែងគោរពសត្វទាំងពីរស្មើគ្នារហូតមក។</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +116,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
-<p dir="rtl">آنها تصمیم گرفتتند که یک شوت پنالتی بزنند. اول، هزارپا دروازه بان شد. خروس فقط یک گل زد. بعد نوبت خروس شد که در دروازه بایستد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/04.jpg" /></p>
+<p>ទោះបីជាគូប្រជែងគ្នាក្ដី ក៏ពួកគេនៅតែជាមិត្តនឹងគ្នា។ អណ្ដើកមិនដែលមានអំណួតព្រោះតែខ្លួនឈ្នះនោះឡើយ។ ឯទន្សាយវិញក៏ពុំដែលគុំគួនលើអណ្ដើកដែរ ព្រោះវាដឹងខ្លួនថាចាញ់ដោយយុត្តិធម៌។</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +125,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p dir="rtl">هزارپا به توپ ضربه زد و گل زد. هزارپا توپ را دریبل زد و گل زد. هزارپا با سرش به توپ ضربه زد و گل زد. او در نهایت پنج گل زد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/05.jpg" /></p>
+<p>ច្រើនខែកន្លងផុតទៅ។ ស្ដេចសត្វព្រៃដែលទន្សាយ និងអណ្ដើករស់នៅ មានកិច្ចការសំខាន់ត្រូវពិភាក្សាជាមួយស្ដេចសត្វព្រៃដែលនៅជិតខាង។ ប៉ុន្តែស្ដេចសត្វនេះ មិនអាចចេញពីព្រៃរបស់ខ្លួនបាននៅពេលនេះឡើយ។ ព្រះអង្គក៏សម្រេចបញ្ជូនទន្សាយ និងអណ្ដើកឲ្យទៅជំនួសក្នុងនាមព្រះរាជតំណាង។</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +134,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
-<p dir="rtl">خروس از اینکه بازی را باخته بود خیلی عصبانی بود. او بازنده ی خیلی بدی بود. هزارپا شروع به خندیدن کرد چون دوستش شروع به نق زدن کرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/06.jpg" /></p>
+<p>ស្ដេចសត្វព្រៃក៏កោះហៅទន្សាយ និងអណ្ដើកមកជួប។ ស្ដេចសត្វក៏ចេញព្រះរាជបញ្ជាថា៖ “ក្នុងចំណោមពួកឯង ត្រូវមានម្នាក់ចេញទៅជួបស្ដេចសត្វព្រៃជិតខាងនេះ។”</p>
+<p>“យើងមានកិច្ចការសំខាន់ៗចង់ឲ្យឯងពិភាក្សាជាមួយស្ដេចសត្វព្រៃនៅទីនោះជំនួសយើង។ ពេលត្រឡប់មកវិញ ពួកឯងត្រូវនាំយកគំនិតរបស់ទ្រង់មកប្រាប់យើងវិញឮទេ?”</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +144,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
-<p dir="rtl">خروس خیلی عصبانی بود در حدی که نوکش را کاملا باز کرد و هزارپا را قورت داد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/07.jpg" /></p>
+<p>ស្ដេចសត្វបានបញ្ជាក់ទៀតថា៖ “ត្រូវចាំថាពួកឯងមានពេលតែមួយថ្ងៃប៉ុណ្ណោះដើម្បីធ្វើកិច្ចការនេះ។ ឥឡូវពួកឯងអាចទៅបានហើយ ប៉ុន្តែត្រូវប្រយ័ត្នផង។”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +153,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
-<p dir="rtl">هنگامی که خروس داشت به خانه می‌رفت، مادر هزارپا را دید. او پرسید، &quot;تو پسرم را دیده ای؟&quot; خروس هیچ جوابی نداد. مادر هزارپا نگران شده بود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/08.jpg" /></p>
+<p>តាមផ្លូវទៅកាន់អាណាចក្រព្រៃមួយទៀតនោះ គឺពិបាកធ្វើដំណើរណាស់។ ផ្លូវនោះសម្បូរទៅដោយថ្មរដិបរដុប និងដើមបន្លាយក្សធំៗទៀតផង។ បន្តពីនោះទៅ នៅមានទន្លេពីរដែលត្រូវឆ្លងទៀតផង។</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +162,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p dir="rtl">درآن هنگام مادر هزارپا صدای ظریفی را شنید. صدایی گریان: &quot;کمکم کن مامان!&quot; مادر هزارپا به اطراف نگاه کرد و با دقت گوش کرد. صدا از درون شکم خروس می‌آمد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/09.jpg" /></p>
+<p>គិតមួយស្របក់ ទន្សាយ និងអណ្ដើក ដឹងថាពួកគេមិនអាចបំពេញភារកិច្ចនេះ តែម្នាក់ឯងបានឡើយ។ ពួកគេក៏សម្រេចចិត្តធ្វើដំណើររួមគ្នា។</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +171,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
-<p dir="rtl">مادر هزارپا فریاد زد، &quot;از قدرت مخصوصت استفاده کن فرزندم!&quot; هزارپاها می‌توانند بوی بد و مزه ی وحشتناکی به وجود آورند. خروس احساس کرد که دارد حالش بد می‌شود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/10.jpg" /></p>
+<p>សត្វទាំងពីរក៏គិតរៀបចំ ផែនការ។ បើតាមផ្លូវដែលមានដើមបន្លាយក្ស ទន្សាយត្រូវដឹកអណ្ដើកពីក្រោយខ្នង។ ឯពេលឆ្លងទន្លេ អណ្ដើកក៏ត្រូវដឹកទន្សាយពីលើខ្នងវិញម្ដង។</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +180,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
-<p dir="rtl">خروس آروغ زد. بعدا دوباره قورت داد و تف کرد. بعد عطسه کرد و سرفه کرد. و سرفه کرد. هزارپا چندش آور بود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/11.jpg" /></p>
+<p>នៅថ្ងៃបន្ទាប់ ពួកគេក៏យកព្រះរាជសារពីស្ដេចរបស់ខ្លួន ហើយក៏ចេញដំណើរ។ ទន្សាយធ្វើដំណើរតែបន្តិចក៏ឆ្លងផុតផ្លូវដែលមានដើមបន្លាយក្ស។ នេះក៏ព្រោះតែវាលោតម្ដងៗបានឆ្ងាយ ហើយមានស្នូកអណ្ដើកដ៏រឹងលើខ្នងវាការពារបន្លា។ ឯអណ្ដើកវិញត្រូវប្រឹងទប់ ក្រែងធ្លាក់ពីលើខ្នងទន្សាយ។</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +189,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
-<p dir="rtl">خروس آنقدر سرفه کرد تا هزارپا از دهانش بیرون آمد. مادر هزارپا و بچه اش به بالای درخت خزیدند تا مخفی شوند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/12.jpg" /></p>
+<p>នៅពេលដល់ទន្លេ ពួកគេក៏ប្ដូរវេនគ្នាតាមផែនការ។ ទន្សាយក៏លោតទំលើខ្នងអណ្ដើកម្ដង។</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +198,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
-<p dir="rtl">از آن زمان به بعد، مرغ ها وهزارپاها با هم دشمن شدند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/13.jpg" /></p>
+<p>អណ្ដើកក៏ហែលឆ្លងទន្លេយ៉ាងលឿនដោយស្ទាត់ជំនាញ។ ឆ្លងទន្លេផុតមិនយូរប៉ុន្មាន ពួកគេក៏ទៅដល់អាណាចក្រនោះ។</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,17 +207,35 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="خروس-و-هزارپا-1">خروس و هزارپا</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/14.jpg" /></p>
+<p>បន្ទាប់មកពួកគេក៏ពិភាក្សាកិច្ចការជាមួយស្ដេចសត្វព្រៃនៅទីនោះតាមព្រះរាជបណ្ដាំ ស្ដេចរបស់ខ្លួន។ ចប់រួចរាល់ ទន្សាយ និងអណ្ដើក ក៏ត្រៀមវិលត្រឡប់មកវិញ។</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0092/15.jpg" /></p>
+<p>ការដំណើរត្រឡប់មកវិញ កាន់តែរលូនជាងតាមផ្លូវធ្វើដំណើរមក។ កត្តានេះដោយសារដៃគូទាំងពីរដឹងច្បាស់ពីអ្វីដែលខ្លួនត្រូវធ្វើ។ សត្វដែលធ្លាប់តែជាគូបដិបក្ខនឹងគ្នា បានសហការគ្នាយ៉ាងល្អ។ ទីបំផុត ពួកគេក៏អាចត្រឡប់មកជួបស្ដេចរបស់ខ្លួនវិញ មុនពេលវេលាកំណត់ពីរបីម៉ោងឯណោះ។</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ទនសយ-នងអណដក-ជថម-1">ទន្សាយ និងអណ្ដើក (ជាថ្មី)</h2>
+<strong>Text:</strong> Venkatramana Gowda, Divaspathy Hegde<br> <strong>Illustrations:</strong> Padmanabha<br> <strong>Translation:</strong> Khuob Sopheak<br> <strong>Language:</strong> Khmer<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/chicken-and-millipede'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hare-and-tortoise-again'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
