--- a/stories/km/0141_មាន់-និង-ម្រើមព្រះ_slides.html
+++ b/stories/km/0141_មាន់-និង-ម្រើមព្រះ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>خروس و هزارپا - Global African Storybook</title>
+  <title>មាន់ និង ម្រើមព្រះ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="خروس-و-هزارپا" class="slide level1">
-<h1 dir="rtl">خروس و هزارپا</h1>
+<section id="មន-នង-មរមពរ" class="slide level1">
+<h1>មាន់ និង ម្រើមព្រះ</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
 </center>
@@ -96,8 +96,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
-<p dir="rtl">خروس و هزارپا با هم دوست بودند. ولی همیشه با هم در حال رقابت بودند. یک روز تصمیم گرفتند با هم فوتبال بازی کنند تا ببینند چه کسی بهترین بازیکن است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
+<p>មាន់ និងម្រើមព្រះ ជាមិត្តនឹងគ្នា។ ប៉ុន្តែពួកវាតែងប្រជែងគ្នាជានិច្ច។</p>
+<p>ថ្ងៃមួយ ពួកគេក៏បបួលគ្នាលេងបាល់ទាត់។ អ្នកទាំងពីរចង់ដឹងថាតើនរណាពូកែជាងគេ។</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +106,11 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
-<p dir="rtl">آنها به زمین فوتبال رفتند وبازیشان را شروع کردند. خروس سریع حرکت می‌کرد ولی هزارپا سریعتر بود. خروس توپ را به دور پرتاب می‌کرد ولی هزارپا به دورتر. خروس شروع به بداخلاقی کرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
+<p>ពួកគេក៏ចេញទៅទីលានបាល់ទាត់។ ការប្រកួតក៏ចាប់ផ្ដើម។</p>
+<p>មាន់រត់យ៉ាងលឿន។ ប៉ុន្តែម្រើមព្រះ រត់លឿនជាង។</p>
+<p>មាន់ទាត់បាល់បានឆ្ងាយ។ ប៉ុន្តែម្រើមព្រះ ទាត់បាល់បានឆ្ងាយជាង។</p>
+<p>មាន់ក៏ចាប់ផ្ដើមមួម៉ៅ។</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +118,10 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
-<p dir="rtl">آنها تصمیم گرفتتند که یک شوت پنالتی بزنند. اول، هزارپا دروازه بان شد. خروس فقط یک گل زد. بعد نوبت خروس شد که در دروازه بایستد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
+<p>ពួកគេក៏សម្រេចចិត្តទាត់ប៉េណាល់ទីវិញម្ដង។</p>
+<p>ដំបូងម្រើមព្រះ ធ្វើជាអ្នកចាំទី។ មាន់ទាត់ចូលទីបានតែមួយគ្រាប់ប៉ុណ្ណោះ។</p>
+<p>បន្ទាប់មក ដល់វេនមាន់ចាំទីវិញម្ដង។</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +129,11 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p dir="rtl">هزارپا به توپ ضربه زد و گل زد. هزارپا توپ را دریبل زد و گل زد. هزارپا با سرش به توپ ضربه زد و گل زد. او در نهایت پنج گل زد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
+<p>ម្រើមព្រះទាត់បាល់ចូល។</p>
+<p>ម្រើមព្រះបណ្ដើរបាល់ចុះឡើង ក៏ទាត់ចូលទៀត។</p>
+<p>ម្រើមព្រះ តែតបាល់ចូលទីទៀត។</p>
+<p>ម្រើមព្រះទាត់ចូលសរុបបានប្រាំគ្រាប់។</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +141,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
-<p dir="rtl">خروس از اینکه بازی را باخته بود خیلی عصبانی بود. او بازنده ی خیلی بدی بود. هزارپا شروع به خندیدن کرد چون دوستش شروع به نق زدن کرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
+<p>ពេលចាញ់បែបនេះ មាន់ខឹងយ៉ាងខ្លាំង ។</p>
+<p>ម្រើមព្រះអស់សំណើច ព្រោះឃើញមិត្តវាខឹងឡើងមុខក្រហម។</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +151,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
-<p dir="rtl">خروس خیلی عصبانی بود در حدی که نوکش را کاملا باز کرد و هزارپا را قورت داد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
+<p>មាន់ខឹងខ្លាំងពេក ក៏បើកចំពុះចឹកលេបម្រើមព្រះចូលពោះបាត់។</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +160,10 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
-<p dir="rtl">هنگامی که خروس داشت به خانه می‌رفت، مادر هزارپا را دید. او پرسید، &quot;تو پسرم را دیده ای؟&quot; خروس هیچ جوابی نداد. مادر هزارپا نگران شده بود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
+<p>ពេលដើរមកផ្ទះវិញ មាន់ក៏ជួបនឹងមេម្រើមព្រះ។</p>
+<p>មេម្រើមព្រះក៏សួរថា៖ “តើឯងបានឃើញកូនខ្ញុំដែរឬទេ?” មាន់មិននិយាយអ្វីទាំងអស់។</p>
+<p>មេម្រើមព្រះ ព្រួយបារម្ភយ៉ាងខ្លាំង។</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +171,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p dir="rtl">درآن هنگام مادر هزارپا صدای ظریفی را شنید. صدایی گریان: &quot;کمکم کن مامان!&quot; مادر هزارپا به اطراف نگاه کرد و با دقت گوش کرد. صدا از درون شکم خروس می‌آمد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
+<p>រំពេចនោះ មេម្រើមព្រះ បានឮសំឡេងខ្សាវៗ។ “ម៉ែជួយកូនផង!”</p>
+<p>មេម្រើមព្រះសម្លឹងជុំវិញ ហើយប្រឹងស្ដាប់យ៉ាងប្រុងប្រយ័ត្ន។ សំឡេងនោះ គឺឮចេញពីក្នុងពោះមាន់សោះ។</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +181,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
-<p dir="rtl">مادر هزارپا فریاد زد، &quot;از قدرت مخصوصت استفاده کن فرزندم!&quot; هزارپاها می‌توانند بوی بد و مزه ی وحشتناکی به وجود آورند. خروس احساس کرد که دارد حالش بد می‌شود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
+<p>មេម្រើមព្រះក៏ស្រែកថា៖ “កូនសម្លាញ់! ចូរកូនប្រើជំនាញពិសេសរបស់កូនទៅ។”</p>
+<p>ម្រើមព្រះ ក៏បញ្ចេញក្លិនស្អុយ និងរសជាតិគួរឲ្យខ្ពើម។ មាន់ចាប់ផ្ដើមមានអារម្មណ៍មិនស្រួលខ្លួន។</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +191,10 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
-<p dir="rtl">خروس آروغ زد. بعدا دوباره قورت داد و تف کرد. بعد عطسه کرد و سرفه کرد. و سرفه کرد. هزارپا چندش آور بود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
+<p>មាន់ចាប់ផ្ដើមភើ។ បន្ទាប់មកវាចាប់ផ្ដើមខាកផង ស្ដោះផង។</p>
+<p>ក្រោយមក វាក៏កណ្ដាស់ ហើយក្អក។ ក្អកហើយ ក្អកទៀត។</p>
+<p>ម្រើមព្រះគួរឲ្យខ្ពើមរអើមណាស់!</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +202,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
-<p dir="rtl">خروس آنقدر سرفه کرد تا هزارپا از دهانش بیرون آمد. مادر هزارپا و بچه اش به بالای درخت خزیدند تا مخفی شوند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
+<p>មាន់ក៏ក្អកចេញម្រើមព្រះពីក្នុងពោះវាមកក្រៅ។</p>
+<p>មេម្រើមព្រះ និងកូន ក៏នាំគ្នាវារឡើងដើមឈើដើម្បីលាក់ខ្លួន។</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +212,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
-<p dir="rtl">از آن زمان به بعد، مرغ ها وهزارپاها با هم دشمن شدند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
+<p>ចាប់ពីពេលនោះមក មាន់ និងម្រើមព្រះ ក្លាយជាសត្រូវនឹងគ្នារហូតមក។</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,17 +221,17 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="خروس-و-هزارپا-1">خروس و هزارپا</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<h2 id="មន-នង-មរមពរ-1">មាន់ និង ម្រើមព្រះ</h2>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Khuob Sopheak<br> <strong>Language:</strong> Khmer<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
+<p>
 You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/chicken-and-millipede'>here</a>
-<p dir="rtl"><div class="license">
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
