--- a/stories/ar/0141_-الدجاجة-والدودة-_slides.html
+++ b/stories/ar/0141_-الدجاجة-والدودة-_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 dir="rtl" id="الدجاجة-والدودة-1">الدجاجة والدودة</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p dir="rtl">
