--- a/stories/bn/0141_মুরগী-এবং-কেন্নো_slides.html
+++ b/stories/bn/0141_মুরগী-এবং-কেন্নো_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="মরগ-এব-কনন-1">মুরগী এবং কেন্নো</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Asma Afreen<br> <strong>Language:</strong> Bengali<br>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Asma Afreen<br> <strong>Language:</strong> Bengali<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
