--- a/stories/de/0141_das-huhn-und-der-tausendfüßler_slides.html
+++ b/stories/de/0141_das-huhn-und-der-tausendfüßler_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="das-huhn-und-der-tausendfüßler-1">Das Huhn und der Tausendfüßler</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Veranschaulichung:</strong> Winny Asara<br> <strong>Übersetzung:</strong> Lisa Birkner<br> <strong>Sprache:</strong> Deutsch<br>
+<strong>Text:</strong> Winny Asara<br> <strong>Veranschaulichung:</strong> Magriet Brink<br> <strong>Übersetzung:</strong> Lisa Birkner<br> <strong>Sprache:</strong> Deutsch<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
