--- a/stories/es/0141_el-pollo-y-el-milpiés.html
+++ b/stories/es/0141_el-pollo-y-el-milpiés.html
@@ -131,7 +131,7 @@ Winny Asara<br>Español</div><div class="pagebreak">
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Texto:</strong> Winny Asara<br /><strong>Ilustración:</strong> Winny Asara<br /><strong>Traducción:</strong> Karina Vásquez<br /><strong>Idioma:</strong> Español</p>
+<p><strong>Texto:</strong> Winny Asara<br /><strong>Ilustración:</strong> Magriet Brink<br /><strong>Traducción:</strong> Karina Vásquez<br /><strong>Idioma:</strong> Español</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/chicken-and-millipede">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
