--- a/stories/es/0141_el-pollo-y-el-milpiés_slides.html
+++ b/stories/es/0141_el-pollo-y-el-milpiés_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="el-pollo-y-el-milpiés-1">El Pollo y el Milpiés</h2>
-<strong>Texto:</strong> Winny Asara<br> <strong>Ilustración:</strong> Winny Asara<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
+<strong>Texto:</strong> Winny Asara<br> <strong>Ilustración:</strong> Magriet Brink<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
