--- a/stories/it/0141_pollo-e-millepiedi.html
+++ b/stories/it/0141_pollo-e-millepiedi.html
@@ -131,7 +131,7 @@ Winny Asara<br>Italiano</div><div class="pagebreak">
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Winny Asara<br /><strong>Illustrations:</strong> Winny Asara<br /><strong>Translation:</strong> Laura Pighini<br /><strong>Language:</strong> Italian</p>
+<p><strong>Text:</strong> Winny Asara<br /><strong>Illustrations:</strong> Magriet Brink<br /><strong>Translation:</strong> Laura Pighini<br /><strong>Language:</strong> Italian</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/chicken-and-millipede">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
