--- a/stories/km/0200_ដាយស៊ី-កូនមាន់អស្ចារ្យ_slides.html
+++ b/stories/km/0200_ដាយស៊ី-កូនមាន់អស្ចារ្យ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>خروس و هزارپا - Global African Storybook</title>
+  <title>ដាយស៊ី កូនមាន់អស្ចារ្យ! - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="خروس-و-هزارپا" class="slide level1">
-<h1 dir="rtl">خروس و هزارپا</h1>
+<section id="ដយស-កនមនអសចរយ" class="slide level1">
+<h1>ដាយស៊ី កូនមាន់អស្ចារ្យ!</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
-<p dir="rtl">خروس و هزارپا با هم دوست بودند. ولی همیشه با هم در حال رقابت بودند. یک روز تصمیم گرفتند با هم فوتبال بازی کنند تا ببینند چه کسی بهترین بازیکن است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/02.jpg" /></p>
+<p>កាលពីព្រេងនាយ នៅក្បែរភូមិតូចមួយ មានកសិដ្ឋានដ៏តូចមួយ។</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
-<p dir="rtl">آنها به زمین فوتبال رفتند وبازیشان را شروع کردند. خروس سریع حرکت می‌کرد ولی هزارپا سریعتر بود. خروس توپ را به دور پرتاب می‌کرد ولی هزارپا به دورتر. خروس شروع به بداخلاقی کرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/03.jpg" /></p>
+<p>ក្នុងកសិដ្ឋាននោះមានកូនមាន់មួយ ឈ្មោះថា ដាយស៊ី។</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
-<p dir="rtl">آنها تصمیم گرفتتند که یک شوت پنالتی بزنند. اول، هزارپا دروازه بان شد. خروس فقط یک گل زد. بعد نوبت خروس شد که در دروازه بایستد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/04.jpg" /></p>
+<p>“ពេលធំឡើង ខ្ញុំចង់ហើរឲ្យបានខ្ពស់ៗទៅលើមេឃ។” ដាយស៊ី និយាយ។</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p dir="rtl">هزارپا به توپ ضربه زد و گل زد. هزارپا توپ را دریبل زد و گل زد. هزارپا با سرش به توپ ضربه زد و گل زد. او در نهایت پنج گل زد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/05.jpg" /></p>
+<p>ប៉ុន្តែមាន់ផ្សេងទៀត បែរជាសើចចំអកឲ្យនាងទៅវិញ។</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
-<p dir="rtl">خروس از اینکه بازی را باخته بود خیلی عصبانی بود. او بازنده ی خیلی بدی بود. هزارپا شروع به خندیدن کرد چون دوستش شروع به نق زدن کرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/06.jpg" /></p>
+<p>ពួកគេនិយាយថា៖ “ឯងចម្លែកណាស់។ យើងឈប់លេងចូលឯងហើយ!”</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
-<p dir="rtl">خروس خیلی عصبانی بود در حدی که نوکش را کاملا باز کرد و هزارپا را قورت داد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/07.jpg" /></p>
+<p>ពេលនោះមេមាន់ បានប្រាប់នាងថា៖ “ដាយស៊ី យើងអាចទទះស្លាបយើងបាន។ ប៉ុន្តែកូនដឹងទេ ពិបាកណាស់ដែលមាន់អាចហើរបាននោះ។”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,10 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
-<p dir="rtl">هنگامی که خروس داشت به خانه می‌رفت، مادر هزارپا را دید. او پرسید، &quot;تو پسرم را دیده ای؟&quot; خروس هیچ جوابی نداد. مادر هزارپا نگران شده بود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/08.jpg" /></p>
+<p>ដាយស៊ី មិនបោះបង់ឡើយ។</p>
+<p>រៀងរាល់ថ្ងៃ នាងហ្វឹកហាត់ខ្លួនឯងដោយខំទទះស្លាបរបស់នាង។</p>
+<p>ផ្លាប់! ផ្លាប់! ផ្លាប់! នាងប្រឹងទទះស្លាប ប៉ុន្តែនាងមិនអាចយោងខ្លួនឲ្យផុតពីដីបានឡើយ។</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +161,10 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
-<p dir="rtl">درآن هنگام مادر هزارپا صدای ظریفی را شنید. صدایی گریان: &quot;کمکم کن مامان!&quot; مادر هزارپا به اطراف نگاه کرد و با دقت گوش کرد. صدا از درون شکم خروس می‌آمد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/10.jpg" /></p>
+<p>ក្នុងពេលហ្វឹកហាត់ នាងស្រមៃថាខ្លួនឯងកំពុងតែហើរយ៉ាងខ្ពស់ទៅលើមេឃ។ ហើយនាងមើលឃើញមាន់ដទៃទៀតនៅខាងក្រោម។</p>
+<p>នាងស្រមៃទៀតថា នាងកំពុងតែហើរកាត់ហ្វូងចាប និងត្រចៀកកាំ។</p>
+<p>“អ្ហូ អស្ចារ្យ!” មាន់ចេះហើរ!“ ពួកបក្សីលាន់មាត់។</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +172,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
-<p dir="rtl">مادر هزارپا فریاد زد، &quot;از قدرت مخصوصت استفاده کن فرزندم!&quot; هزارپاها می‌توانند بوی بد و مزه ی وحشتناکی به وجود آورند. خروس احساس کرد که دارد حالش بد می‌شود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/12.jpg" /></p>
+<p>ដូច្នេះ... ផ្លាប់! ផ្លាប់! ផ្លា់ប់! ដាយស៊ី ខំរៀនទទះស្លាបខ្លួនឯងរាល់ថ្ងៃ។</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +181,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
-<p dir="rtl">خروس آروغ زد. بعدا دوباره قورت داد و تف کرد. بعد عطسه کرد و سرفه کرد. و سرفه کرد. هزارپا چندش آور بود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/13.jpg" /></p>
+<p>នាងហើបខ្លួនផុតពីដីបានបន្តិច ក៏ធ្លាក់ចុះមកវិញ។</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +190,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
-<p dir="rtl">خروس آنقدر سرفه کرد تا هزارپا از دهانش بیرون آمد. مادر هزارپا و بچه اش به بالای درخت خزیدند تا مخفی شوند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/14.jpg" /></p>
+<p>“ខ្ញុំបែបមិនចេះហើរទេម៉ែ! មាន់ឯទៀតនិយាយត្រូវណាស់។” ដាយស៊ី យំប្រាប់មេមាន់។</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +199,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
-<p dir="rtl">از آن زمان به بعد، مرغ ها وهزارپاها با هم دشمن شدند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/15.jpg" /></p>
+<p>មេមាន់ក៏លួងលោមថា “ដាយស៊ី កូនខុសពីគេ។ មាន់ផ្សេងទៀតគេមិនចង់ចេះហើរទេ ប៉ុន្តែកូនទេចង់ហើរ! កូនអាចធ្វើបាន។”</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,17 +208,94 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="خروس-و-هزارپا-1">خروس و هزارپا</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/16.jpg" /></p>
+<p>ថ្ងៃក្រោយមក ដាយស៊ី បានឡើងទៅលើដំបូលទ្រុង ហើយនាងខំទទះស្លាប ផ្លាប់ ផ្លាប់​ ផ្លាប់។</p>
+<p>នាងហើរទៅលើអាកាសហើយទទះស្លាប...ទទះស្លាបហើយ...ទទះស្លាបទៀត...ហើយក៏...</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/18.jpg" /></p>
+<p>ប៉ាំង!</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/19.jpg" /></p>
+<p>មាន់ផ្សេងទៀតបានសើចខ្លាំង ៗ ។</p>
+<p>&quot;ហាហាហាយើងប្រាប់អ្នកថាមាន់មិនអាចហើរបានទេ!&quot;</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/20.jpg" /></p>
+<p>ប៉ុន្តែថ្ងៃបន្ទាប់ ដាយស៊ី បានឡើងទៅកាន់តែខ្ពស់ជាងមុនរហូតដល់ដំបូលខ្ទម!</p>
+<p>ផ្លាប់! ផ្លាប់! ផ្លាប់! ដាយស៊ី ខំទទះស្លាប។</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/21.jpg" /></p>
+<p>នាងហើរទៅលើអាកាសហើយប្រឹង ទទះស្លាប...ទទះហើយ...ទទះទៀត...ហើយទទះទៀត...ហើយ...</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/22.jpg" /></p>
+<p>នាងនៅតែហើរបានទៀត!</p>
+<p>ខ្យល់ក្រោមស្លាបនាងខ្លាំងទៅៗ ធ្វើឲ្យនាងហើរបានកាន់តែខ្ពស់ទៅៗ!</p>
+<p>ហ្វូងចាប និងត្រចៀកកាំ លាន់មាត់ថា៖ “អស្ចារ្យមែន! មាន់ចេះហើរ!”</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/23.jpg" /></p>
+<p>ឯមាន់ដទៃទៀតក៏ចង់ចេះហើរដូចនាងដែរ!</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0200/24.jpg" /></p>
+<p>ពួកគេលាន់មាត់ឡើងថា៖ “អូ ដាយស៊ី! ឯងពិតជាអស្ចារ្យមែន!”</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ដយស-កនមនអសចរយ-1">ដាយស៊ី កូនមាន់អស្ចារ្យ!</h2>
+<strong>Text:</strong> Nozizwe Herero<br> <strong>Illustrations:</strong> Siya Masuku<br> <strong>Translation:</strong> Khuob Sopheak<br> <strong>Language:</strong> Khmer<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/chicken-and-millipede'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/amazing-daisy'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
