--- a/stories/nb/0141_hønemor-og-tusenbein_slides.html
+++ b/stories/nb/0141_hønemor-og-tusenbein_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="hønemor-og-tusenbein-1">Hønemor og Tusenbein</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Finn Stranger-Johannessen<br> <strong>Language:</strong> Norwegian<br>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Finn Stranger-Johannessen<br> <strong>Language:</strong> Norwegian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
