--- a/stories/pa/0141_ਮੁਰਗੀ-ਅਤੇ-ਕੰਨਖਜੂਰਾ_slides.html
+++ b/stories/pa/0141_ਮੁਰਗੀ-ਅਤੇ-ਕੰਨਖਜੂਰਾ_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="ਮਰਗ-ਅਤ-ਕਨਖਜਰ-1">ਮੁਰਗੀ ਅਤੇ ਕੰਨਖਜੂਰਾ</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
