--- a/stories/pl/0141_kurczak-i-stonoga_slides.html
+++ b/stories/pl/0141_kurczak-i-stonoga_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="kurczak-i-stonoga-1">Kurczak i Stonoga</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
