--- a/stories/tl/0141_si-manok-at-si-milipid_slides.html
+++ b/stories/tl/0141_si-manok-at-si-milipid_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="si-manok-at-si-milipid-1">Si Manok at Si Milipid</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Karla Comanda<br> <strong>Language:</strong> Tagalog<br>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Karla Comanda<br> <strong>Language:</strong> Tagalog<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
