--- a/stories/ur/0141_چوزی-اور-ہزار-پا_slides.html
+++ b/stories/ur/0141_چوزی-اور-ہزار-پا_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="چوزی-اور-ہزار-پا-1">چوزی اور ہزار پا</h2>
-<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Magriet Brink<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
