--- a/stories/yue/0141_雞同千足蟲_slides.html
+++ b/stories/yue/0141_雞同千足蟲_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="雞同千足蟲-1">雞同千足蟲</h2>
-<strong>文:</strong> Winny Asara<br> <strong>圖:</strong> Winny Asara<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<strong>文:</strong> Winny Asara<br> <strong>圖:</strong> Magriet Brink<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
